style: fix aboutWalk style broken in iphone

--- a/src/components/LeftMenuBar/AboutWalk/AboutWalkDialogContent.scss
+++ b/src/components/LeftMenuBar/AboutWalk/AboutWalkDialogContent.scss
@@ -1,17 +1,17 @@
 @import '../../../style/index.scss';
 
 .dui-AboutWalkDialogContent{
-  flex: 1;
   overflow: auto;
   margin: 0px 5px;
   padding: 0px 25px;
-  display: flex;
-  flex-direction: column;
 
   &-img{
     display: flex;
     justify-content: center;
     img{
+      max-height: 400px;
+      min-height: 200px;
+      object-fit: contain;
       max-width: 400px;
       width: 100%;
       height: auto;
